# Utilities

./: CMakeLists.txt
CMake/: FindCatch2.cmake  FindEigen3.cmake  FindGMock.cmake  FindGSL.cmake  GoogleTestConfig.cmake
Interface/: Utilities.ixx
Interface/Events/: Event.ixx  Events.ixx  InternalEvent.ixx  InternalEventsComponent.ixx
Interface/Exceptions/: EngineException.ixx
Interface/Helpers/: Helpers.ixx
Interface/Math/: MathHelpers.ixx
Interface/Memory/: ContiguousMemoryPool.ixx  Memory.ixx  MemoryPool.ixx  PointedContiguousMemoryPool.ixx
Interface/Threading/: Task.ixx  TasksComponent.ixx  Threading.ixx
Interface/Timers/: PerformanceTimer.ixx  Timer.ixx
Source/: CMakeLists.txt
Source/Maia/Utilities/: CMakeLists.txt  Utilities.cpp
Source/Maia/Utilities/Allocators/: ForwardAllocator.hpp
Source/Maia/Utilities/glTF/: gltf.cpp  gltf.hpp
Test/: CMakeLists.txt
Test/UnitTest/: CMakeLists.txt
Test/UnitTest/Source/: main.cpp
Test/UnitTest/Source/Allocators/: BuddyAllocatorTest.cpp  ForwardAllocatorTest.cpp
Test/UnitTest/Source/Containers/Pools/: ContiguousMemoryPoolTest.cpp  MemoryPoolTest.cpp
Test/UnitTest/Source/Math/: MathHelpersTest.cpp
Test/UnitTest/Source/Memory/: ContiguousMemoryPoolTest.cpp  MemoryPoolTest.cpp
Utilities/: CMakeLists.txt
Utilities/Allocators/: BuddyAllocator.hpp  ForwardAllocator.hpp  MemoryArena.hpp
